// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-checked 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall Mui-checked MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      checked=""
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-fill css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-default 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-disabled 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    aria-disabled="true"
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall Mui-disabled MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
    tabindex="-1"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      disabled=""
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-disabled-checked 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    aria-disabled="true"
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
    tabindex="-1"
  >
    <input
      checked=""
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      disabled=""
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-fill css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-indeterminate 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="true"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-indeterminate-fill css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-unchecked 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-error 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorError MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorError MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorError MuiCheckbox-sizeSmall css-11q9dqx-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-info 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorInfo MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorInfo MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorInfo MuiCheckbox-sizeSmall css-1gy9f1o-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-primary 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-secondary 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-success 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSuccess MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSuccess MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorSuccess MuiCheckbox-sizeSmall css-paglm8-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-warning 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorWarning MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorWarning MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorWarning MuiCheckbox-sizeSmall css-13vw3jy-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-size-large 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeLarge PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeLarge MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeLarge css-anl6d1-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-size-medium 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeMedium css-3xwx41-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-size-small 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for customization options > checkbox-custom-icons 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeSmall ri-circle-line css-20vhad-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for customization options > checkbox-custom-props 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    aria-label="Custom Checkbox"
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall custom-class css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      id="custom-checkbox"
      name="test-checkbox"
      type="checkbox"
      value="custom-value"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for customization options > checkbox-custom-sx 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-8676s7-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for real-world scenarios > checkbox-bulk-selection 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-140xs0f-MuiPaper-root"
    style="--Paper-shadow: var(--shadows-0); --Paper-overlay: var(--overlays-0);"
  >
    <div
      class="MuiBox-root css-kmnzss"
    >
      <span
        aria-label="Select all items"
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
      >
        <input
          class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
          data-indeterminate="true"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-indeterminate-fill css-12fu13m-MuiIcon-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hjv2mt-MuiTypography-root"
      >
        Select All
      </span>
    </div>
    <div
      class="MuiStack-root css-j3ygch-MuiStack-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Select Item 1"
          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
        >
          <input
            checked=""
            class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
            data-indeterminate="false"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-fill css-12fu13m-MuiIcon-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-bodyRegularMedium css-p4afvq-MuiTypography-root"
        >
          Item 1
        </span>
      </div>
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Select Item 2"
          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
        >
          <input
            class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
            data-indeterminate="false"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-bodyRegularMedium css-p4afvq-MuiTypography-root"
        >
          Item 2
        </span>
      </div>
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Select Item 3"
          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
        >
          <input
            class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
            data-indeterminate="false"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-bodyRegularMedium css-p4afvq-MuiTypography-root"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for real-world scenarios > checkbox-form-context 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <form
    class="MuiBox-root css-0"
  >
    <fieldset
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
    >
      <legend
        class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1kmy6r1-MuiFormLabel-root"
      >
        Form Checkbox
      </legend>
      <span
        aria-describedby="form-help"
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeSmall css-f3nshg-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
      >
        <input
          class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
          data-indeterminate="false"
          name="form-checkbox"
          required=""
          type="checkbox"
          value="form-value"
        />
        <span
          aria-hidden="true"
          class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
        />
      </span>
      <p
        class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1pd97o3-MuiFormHelperText-root"
        helpertext=""
        id="form-help"
      >
        This checkbox is required
      </p>
    </fieldset>
  </form>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for real-world scenarios > checkbox-terms-scenario 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-tdxhcn-MuiPaper-root"
    style="--Paper-shadow: var(--shadows-1); --Paper-overlay: var(--overlays-1);"
  >
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiTypography-gutterBottom css-12scg6d-MuiTypography-root"
    >
      Terms and Conditions
    </span>
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd Mui-required css-1dw706d-MuiFormControlLabel-root"
    >
      <span
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-pxtq08-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
      >
        <input
          class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
          data-indeterminate="false"
          name="terms"
          required=""
          type="checkbox"
          value="accepted"
        />
        <span
          aria-hidden="true"
          class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
        />
      </span>
      <div>
        <span
          class="MuiTypography-root MuiTypography-bodyRegularMedium css-p4afvq-MuiTypography-root"
        >
          I accept the 
          <a
            class="MuiTypography-root MuiTypography-bodyRegularSmall MuiLink-root MuiLink-underlineHover css-1ebax9u-MuiTypography-root-MuiLink-root"
            href="/terms"
          >
            terms and conditions
          </a>
        </span>
        <span
          aria-hidden="true"
          class="MuiFormControlLabel-asterisk css-1jn3qvn-MuiFormControlLabel-asterisk"
        >
           
          *
        </span>
      </div>
    </label>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium css-129as7y-MuiTypography-root"
    >
      By checking this box, you agree to our terms of service.
    </span>
  </div>
</div>
`;

exports[`DsCheckbox Component > Theme Testing > should render correctly across all color schemes with proper theme colors > checkbox-dark-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="dark"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Theme Testing > should render correctly across all color schemes with proper theme colors > checkbox-highContrast-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="highContrast"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Theme Testing > should render correctly across all color schemes with proper theme colors > checkbox-light-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;
